--- a/src/assets/css/trapparty.css
+++ b/src/assets/css/trapparty.css
@@ -1,5 +1,7 @@
-/* stylelint-disable at-rule-no-unknown */
+/* stylelint-disable import-notation */
 /* stylelint-disable plugin/no-unsupported-browser-features */
+
+@import '../../node_modules/@dargmuesli/nuxt-vio/assets/css/vio.css';
 
 @layer theme {
   :root, :host {
